# fantasy-data-generator

./: Cargo.toml  config.toml
Arcane Evaluation Generator/: ArcaneEvaluationGenerator.ipynb
artifacts/src/: Main.java
artifacts/src/data/: Others.java  Weapons.java
data/: .gitignore  civilizations.csv  facilities.csv
sql/: bulk_insert.ipynb  bulk_insert_t1.ipynb  bulk_insert_t2.ipynb  createArcaneVaultDatabase.sql  debug.sql
src/: config.rs  data_extract.rs  letter_data.rs  main.rs
src/adventurers/: mod.rs  name_generator.rs  surname_generator.rs
src/adventures/: cost.rs  dates.rs  fk.rs  mod.rs  status.rs
src/artifacts/: mod.rs  status.rs  type_data.rs
src/artifacts/src/: Generator.java
src/artifacts/src/data/: Armors.java  Suffixes.java
src/destinations/: civilizations.rs  coordinates.rs  difficulty.rs  mod.rs  name_data.rs  name_generator.rs
src/model/: adventure.rs  adventurer.rs  artifact.rs  civilization.rs  destination.rs  mod.rs  participation.rs
src/participations/: mod.rs  validation.rs
