[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
csv = "1.3.0"
mockd = {version = "0.4.1", features = ["datetime"]}
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
